--- a/index.html
+++ b/index.html
@@ -9,5 +9,8 @@
 <body>
     <h1>hello world</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente, nobis.</p>
+    <script>
+        alert("HELLO WORLD");
+    </script>
 </body>
 </html>
