--- a/index.html
+++ b/index.html
@@ -1,16 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>welcome</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <h1>hello world</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente, nobis.</p>
     <script>
-        alert("HELLO WORLD");
+        // alert("HELLO WORLD");
+
+        var x = 10;
+        var y = 20;
+        var z = x + y;
+        console.log(z);
+        // output 30
+
+        var s1 = "10";
+        var s2 = "20";
+        var s3 = s1 + s2;  // concetination
+        console.log(s3);
+        // output = 1020 
+
+
+        var name = "junaid";
+        console.log(name);
+
+        var hi = "i am \'junaid\'";
+        console.log(hi);
+
+        var hello = 'my name is "syed junaid shah"';
+        console.log(hello);
+
+        var a;    //undefined
+        console.log(a); 
+
+        // boolean
+
+        var x= true;
+        console.log(x); 
+
+        var y= false;
+        console.log(x);
+
+        var x= 10;
+        console.log(x);
+
     </script>
 </body>
+
 </html>
