--- a/functions.html
+++ b/functions.html
@@ -56,25 +56,24 @@
             return ` the modolus of ${num1} and ${num2} is ${mod}`
         }
 
-        let num1;
-        let num2;
+       
 
-        let a = input1(num1);
-        let b = input2(num2);
+        let num1 = input1();
+        let num2 = input2();
 
-        let addition = add(a, b);
+        let addition = add(num1, num2);
         console.log(addition);
 
-        let subtraction = sub(a, b);
+        let subtraction = sub(num1, num2);
         console.log(subtraction);
 
-        let division = div(a, b);
+        let division = div(num1, num2);
         console.log(division);
 
-        let multiplication = mul(a, b);
+        let multiplication = mul(num1, num2);
         console.log(multiplication);
 
-        let modolus = mod(a, b);
+        let modolus = mod(num1, num2);
         console.log(modolus);
 
 
