--- a/functionPratice.html
+++ b/functionPratice.html
@@ -29,23 +29,56 @@
                 return num2;
             }
         }
-
-        function add(num1=0, num2=0){
-            let x = parseInt(num1)
-            let y = parseInt(num2)
-            let sum = x+y
+        
+        function add(num1=0,num2=0){
+            let x = parseInt(num1);
+            let y = parseInt(num2);
+            let sum = x+y;
             return `the sum of ${num1} and ${num2} is ${sum}`
 
         }
 
+        function sub(num1=0,num2=0){
+            let sub = num1-num2
+            return `the subtraction of ${num1} and ${num2} is ${sub}`
+        }
 
-        let num1;
-        let num2;
-        let a = input1(num1)
-        let b = input2(num2)
+        function divide(num1=0,num2=0){
+            let divide = num1/num2;
+            return `the division of ${num1} and ${num2} is ${divide}`;
+        }
 
-        let result = add(a,b);
-        console.log(result)
+        function multiply(num1=0,num2=0){
+            let multiply = num1*num2;
+            return`the multiplication of ${num1} and ${num2} is ${multiply}`
+        }
+
+        function modolo(num1=0,num2=0){
+            let modolo = num1%num2;
+            return `the modolus of ${num1} and ${num2} is ${modolo}`
+        }
+
+
+        let num1=input1();
+        let num2= input2();
+
+        let addition = add(num1,num2);
+        console.log(addition);
+
+        let subtraction = sub(num1,num2);
+        console.log(subtraction);
+
+        let division = divide(num1,num2);
+        console.log(division);
+
+        let multiplication = multiply(num1,num2)
+        console.log(multiplication);
+
+        let modolus = modolo(num1,num2)
+        console.log(modolus)
+
+
+
         
  </script>
 </body>
