--- a/turnery.html
+++ b/turnery.html
@@ -10,8 +10,14 @@
         let x = prompt("enter any number");
         let isX = isNaN(x);
         isX
-        ? console.log("${x} is not a number")
-        : console.log("${x} is a number");
+        ? console.log(`${x} is not a number`)
+        : console.log(`${x} is a number`);
+
+        let a = 200;
+        let b = 300;
+        b>a
+        ? console.log(`${a} is less than ${b}`)
+        : console.log(`${a} is greater than ${b}`)
     </script>
 </body>
 </html>
