--- a/functions.html
+++ b/functions.html
@@ -18,7 +18,7 @@
                 console.log("not a  number")
             }
             else {
-                return num1;
+                return Number(num1);
             }
         }
         function input2() {
@@ -29,14 +29,12 @@
                 console.log("not a  number")
             }
             else {
-                 return num2;
+                 return Number(num2);
             }
 
         }
         function add(num1=0, num2=0) {
-            let x = parseInt(num1);
-            let y = parseInt(num2);
-            let sum = x + y;
+            let sum = num1 + num2;
             return ` the sum of ${num1} and ${num2} is ${sum}`
         }
         function sub(num1=0, num2=0) {
@@ -64,17 +62,17 @@
         let addition = add(num1, num2);
         console.log(addition);
 
-        let subtraction = sub(num1, num2);
-        console.log(subtraction);
+        // let subtraction = sub(num1, num2);
+        // console.log(subtraction);
 
-        let division = div(num1, num2);
-        console.log(division);
+        // let division = div(num1, num2);
+        // console.log(division);
 
-        let multiplication = mul(num1, num2);
-        console.log(multiplication);
+        // let multiplication = mul(num1, num2);
+        // console.log(multiplication);
 
-        let modolus = mod(num1, num2);
-        console.log(modolus);
+        // let modolus = mod(num1, num2);
+        // console.log(modolus);
 
 
     </script>
