--- a/arrow.HTML
+++ b/arrow.HTML
@@ -13,7 +13,8 @@
         // step-2--also function keyword is not allowed
         // additional points ----- in case we have to exicuite only one line of code in the function or in any type of blocks like in loops curley braces are optional and in the same case return is written by default we dont have to write return 
 
-        let sq = () => {
+        let sq = x => {
+            // we can use parenthesis as well and then inside the parenthesis we can decleare the variable and we can do the same without parenthesis
             let x = Number(prompt("enter any number"));
             let res = x*x;
             return res;
