--- a/AnnanamousFunction.html
+++ b/AnnanamousFunction.html
@@ -7,7 +7,8 @@
 </head>
 <body>
     <script>
-        // annanamous function 3rd type of writing a function
+        // annanamous function 3rd type of writing a function this type of function is without name
+        
 
         let sum = function(num1=0,num2=0){
             return num1 + num2;
