--- a/Dom/employee.html
+++ b/Dom/employee.html
@@ -30,14 +30,14 @@
             border: 3px solid black;
             border-radius: 15px;
             height: 25px;
-            text-indent: 36px;
+            text-indent: 36px; 
         }
     </style>
 </head>
 
 <body>
     <div class="container">
-        <!-- <form action=""> -->
+        <form action="">
         <h1>Total Salary</h1>
         <div>
             <label for="empid">Employee-Id</label>
@@ -78,12 +78,12 @@
             <input type="number" name="" id="travelExpenses">
         </div>
 
-        <button onclick="addition()">Total Salary</button>
+        <button  onclick="addition()" type="button">Total Salary</button>
 
         <h2 id="totalSalary">Total Salary Is</h2>
 
 
-        <!-- </form> -->
+        </form>
     </div>
     <script>
         function addition() {
