--- a/addition.html
+++ b/addition.html
@@ -16,7 +16,7 @@
             console.log("not a number");
         }
         else {
-            let  num2 = prompt(w"enter 2nd number");
+            let  num2 = prompt("enter 2nd number");
             let isNum2 = isNaN(num2);
             if (isNum2) {
                 console.log("not a number")
