--- a/QueryString/productDetails.html
+++ b/QueryString/productDetails.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Product Details</title>
     <style>
+        body{
+            background-color: rgb(239, 144, 144);
+        }
         h1{
             margin-left: 750px;
             color: silver;
@@ -19,6 +22,7 @@
             text-transform: capitalize;
             margin: auto;
             background-color:silver;
+            border-radius: 10px;
         }
         table th,td,a {
             border: 2px solid black;
@@ -26,7 +30,7 @@
             color: white;
             text-decoration: none;
             border-radius: 10px;
-            background-color: rgb(164, 101, 144);
+            background-color: rgb(133, 119, 128);
         }
         table td img{
             width: 100px;
