--- a/setAttribute&get.html/task.html
+++ b/setAttribute&get.html/task.html
@@ -7,7 +7,8 @@
     <title>Document</title>
     <style>
         .container {
-            border: 2px solid;
+            /* border: 2px dashed silver; */
+            border-radius: 20px;
 
             width: 500px;
             height: 500px;
@@ -16,7 +17,7 @@
         }
 
         .container2 {
-            border: 2px solid;
+            /* border: 2px solid; */
             width: 500px;
             height: 150px;
             margin: 20px auto;
@@ -27,7 +28,7 @@
         }
 
         .box1 {
-            border: 2px solid black;
+            /* border: 2px solid black; */
             width: 150px;
             height: 130px;
             /* background: url(/assets/images/fan.png); */
@@ -36,7 +37,7 @@
         }
 
         .box2 {
-            border: 2px solid black;
+            /* border: 2px solid black; */
             width: 150px;
             height: 130px;
 
@@ -44,22 +45,21 @@
         }
 
         .box3 {
-            border: 2px solid black;
+            /* border: 2px solid black; */
             width: 150px;
             height: 130px;
         }
 
         img {
-            width: 140px;
-            height: 130px;
-            background-size: cover;
+            width: 100%;
+            height: 100%
         }
     </style>
 </head>
 
 <body>
     <div class="container">
-       <img src="" alt="" id="image"></div>
+       <img src="/assets/images/IMG_20210203_004217.jpg" alt="" id="image"></div>
     <div class="container2">
 
         <div class="box1">
