--- a/Dom/Object/employee2.html
+++ b/Dom/Object/employee2.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="employee.js">
     <style>
         .container {
             border: 3px solid black;
@@ -64,7 +65,7 @@
                 <input type="number" name="" id="totalIncome" disabled>
             </div>
             <div>
-                <button type="submit">please click me</button>
+                <button type="button">please click me</button>
             </div>
         </form>
 
