--- a/Functions-Type/const.html
+++ b/Functions-Type/const.html
@@ -10,6 +10,8 @@
         const sq = () => {
             let x = Number(prompt("enter any value"));
         }
+        // sq = 888; this will not allow to change the vaue of the constant value
+
     </script>
 </body>
 </html>
