--- a/QueryString/productDetails.html
+++ b/QueryString/productDetails.html
@@ -6,13 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Product Details</title>
     <style>
-        body{
+        body {
             background-color: rgb(239, 144, 144);
         }
-        h1{
+
+        h1 {
             margin-left: 750px;
             color: silver;
         }
+
         table {
             border: 3px solid black;
             width: 800px;
@@ -20,19 +22,23 @@
             text-align: center;
             padding: 20px;
             text-transform: capitalize;
-            margin: auto;
-            background-color:silver;
+            margin: 30px auto;
+            background-color: silver;
             border-radius: 10px;
         }
-        table th,td,a {
+
+        table th,
+        td,
+        a {
             border: 2px solid black;
-            padding: 8px; 
+            padding: 8px;
             color: white;
             text-decoration: none;
             border-radius: 10px;
             background-color: rgb(133, 119, 128);
         }
-        table td img{
+
+        table td img {
             width: 100px;
             height: 100px;
             border-radius: 22px;
@@ -69,8 +75,10 @@
                 <td>30</td>
                 <td>10000</td>
                 <td><img src="/assets/images/gaming-keyboard-with-87-keys-rgb-backlit-with-suspension-keys-original-imagzcgwtrabgjna.webp"
-                        alt=""></td>
-                <td><a href="#">Details</a></td>
+                 alt=""></td>
+                <td><a
+                        href="Getdetails.html?id=102&name=keyboard&quantity=30&price=10000&image=gaming-keyboard-with-87-keys-rgb-backlit-with-suspension-keys-original-imagzcgwtrabgjna.webp">Details</a>
+                </td>
             </tr>
             <tr>
                 <td>103</td>
@@ -78,7 +86,7 @@
                 <td>10</td>
                 <td>5000</td>
                 <td><img src="/assets/images/mouse.jpg" alt=""></td>
-                <td><a href="#">Details</a></td>
+                <td><a href="Getdetails.html?id=103&name=mouse&quantity=10&price=5000&image=mouse.jpg">Details</a></td>
             </tr>
             <tr>
                 <td>104</td>
@@ -86,7 +94,7 @@
                 <td>5</td>
                 <td>6000</td>
                 <td><img src="/assets/images/fan.png" alt=""></td>
-                <td><a href="#">Details</a></td>
+                <td><a href="Getdetails.html?id=104&name=fan&quantity=5&price=6000&image=fan.png">Details</a></td>
             </tr>
             <tr>
                 <td>105</td>
@@ -94,7 +102,12 @@
                 <td>1</td>
                 <td>15000</td>
                 <td><img src="/assets/images/Air-Conditioner-Buying-Guide.jpg" alt=""></td>
-                <td><a href="#">Details</a></td>
+                <td><a href="Getdetails.html?id=104&name=fan&quantity=5&price=6000&image=Air-Conditioner-Buying-Guide.jpg">Details</a></td>
+
+                <!-- <td>
+                    <a
+                        href="Getdetails.html?id=105&name=ac&quantity=1&price=15000&img=Air-Conditioner-Buying-Guide.jpg">Details</a>
+                </td> -->
             </tr>
         </tbody>
     </table>
