--- a/setAttribute&get.html/Attributes.html
+++ b/setAttribute&get.html/Attributes.html
@@ -19,7 +19,7 @@
          console.log(textBox);
          textBox.setAttribute("type","password");
          value =textBox.getAttribute('type');
-         console.log(value);
+         console.log(value);()
         }
     </script>
 </body>
