--- a/setAttribute&get.html/task.html
+++ b/setAttribute&get.html/task.html
@@ -59,7 +59,8 @@
 
 <body>
     <div class="container">
-       <img src="/assets/images/IMG_20210203_004217.jpg" alt="" id="image"></div>
+        <img src="/assets/images/IMG_20210203_004217.jpg" alt="" id="image">
+    </div>
     <div class="container2">
 
         <div class="box1">
@@ -69,40 +70,40 @@
             <img src="/assets/images/mouse.jpg" alt="" id="image2" onclick="fun2(src)">
         </div>
         <div class="box3">
-            <img src="/assets/images/pc.jpg" alt="" id="image3" onclick="fun3(src)" >
+            <img src="/assets/images/pc.jpg" alt="" id="image3" onclick="fun3(src)">
         </div>
     </div>
     <script>
-     function fun1(source){
+        function fun1(source) {
 
-        const container = document.getElementById('image')
-        const image1 = document.getElementById('image1')
-        let image=image1.getAttribute('src',`${source}`)
-        container.setAttribute("src",`${image}`)
+            const container = document.getElementById('image')
+            const image1 = document.getElementById('image1')
+            let image = image1.getAttribute('src', `${source}`)
+            container.setAttribute("src", `${image}`)
 
-        
 
-        // const image2 = document.getElementById('image2')
-        // console.log(image2);
-        // const image3 = document.getElementById('image3')
-        // console.log(image3);
-     
-        // container.setAttribute("src","/assets/images/fan.png");
-     }
-     function fun2(source){
-        const container = document.getElementById('image')
-        const image2 = document.getElementById('image2')
-        let image = image2.getAttribute('src',`${source}`)
-        container.setAttribute("src",`${image}`)
 
-     }
-     function fun3(source){
-        const container = document.getElementById('image')
-        const image3 = document.getElementById('image3')
-        let image = image3.getAttribute('src',`${source}`)
-        container.setAttribute("src",`${image}`)
+            // const image2 = document.getElementById('image2')
+            // console.log(image2);
+            // const image3 = document.getElementById('image3')
+            // console.log(image3);
 
-     }
+            // container.setAttribute("src","/assets/images/fan.png");
+        }
+        function fun2(source) {
+            const container = document.getElementById('image')
+            const image2 = document.getElementById('image2')
+            let image = image2.getAttribute('src', `${source}`)
+            container.setAttribute("src", `${image}`)
+
+        }
+        function fun3(source) {
+            const container = document.getElementById('image')
+            const image3 = document.getElementById('image3')
+            // let image = image3.setAttribute('src', `${source}`)
+            container.setAttribute("src", `${image}`)
+
+        }
 
 
     </script>
