--- a/Dom/Object/employee2.html
+++ b/Dom/Object/employee2.html
@@ -15,7 +15,11 @@
             padding: 50px;
             justify-content: end;
         }
-        form{
+        div{
+            margin-top: 10px;
+        }
+
+        form {
             margin: auto;
         }
     </style>
@@ -70,7 +74,21 @@
         </form>
 
     </div>
-    <script src="employee.js"></script>
+    <script>
+        let salary = document.getElementById('salary')
+        let rentalIncome = document.getElementById('rentalIncome');
+        let otherIncome = document.getElementById('otherIncome');
+
+        let valueOfSalary = salary.value;
+        let valueOfRentalIncome = rentalIncome.value;
+        let valueOfOtherIncome = otherIncome.value;
+        let totalWelth = Number(valueOfSalary) + Number(valueOfRentalIncome) + Number(valueOfOtherIncome)
+
+        let totalIncome = document.getElementById('totalIncome');
+        totalIncome.value = totalWelth;
+        console.log(totalWelth)
+
+    </script>
 </body>
 
 </html>
