--- a/setAttribute&get.html/exampleSetAttribute.html
+++ b/setAttribute&get.html/exampleSetAttribute.html
@@ -25,8 +25,9 @@
         function fun() {
             const pass = document.getElementById('password');
             console.log(pass)
-            pass.setAttribute("type", "text", "background-color","green");
-            let val = pass.getAttribute
+            pass.setAttribute("type", "text", "backgroundColor","green");
+            let val = pass.getAttribute("type")
+            console.log(val);
 
         }
        
