--- a/setAttribute&get.html/task.html
+++ b/setAttribute&get.html/task.html
@@ -59,54 +59,40 @@
 
 <body>
     <div class="container">
-        <img src="/assets/images/IMG_20210203_004217.jpg" alt="" id="image">
+        <img src="" alt="" id="image">
     </div>
     <div class="container2">
 
         <div class="box1">
-            <img src="/assets/images/fan.png" alt="" id="image1" onclick="fun1(src)">
+            <img src="/assets/images/fan.png" alt="" id="image1" onclick="fun1()">
         </div>
         <div class="box2">
-            <img src="/assets/images/mouse.jpg" alt="" id="image2" onclick="fun2(src)">
+            <img src="/assets/images/mouse.jpg" alt="" id="image2" onclick="fun2()">
         </div>
         <div class="box3">
-            <img src="/assets/images/pc.jpg" alt="" id="image3" onclick="fun3(src)">
+            <img src="/assets/images/pc.jpg" alt="" id="image3" onclick="fun3()">
         </div>
-    </div>
-    <script>
-        function fun1(source) {
+        <script>
+            const container = document.getElementById('image');
+            function fun1() {
+                const image1 = document.getElementById('image1');
+                let imageSource = image1.getAttribute("src")
+                container.setAttribute(`src`, `${imageSource}`);
+            }
 
-            const container = document.getElementById('image')
-            const image1 = document.getElementById('image1')
-            let image = image1.getAttribute('src', `${source}`)
-            container.setAttribute("src", `${image}`)
+            function fun2() {
+                const image2 = document.getElementById('image2');
+                let image2Source = image2.getAttribute('src');
+                container.setAttribute(`src`, `${image2Source}`);
+            }
 
+            function fun3() {
+                const image3 = document.getElementById('image3');
+                let image3source = image3.getAttribute('src');
+                container.setAttribute("src", `${image3source}`)
+            }
 
-
-            // const image2 = document.getElementById('image2')
-            // console.log(image2);
-            // const image3 = document.getElementById('image3')
-            // console.log(image3);
-
-            // container.setAttribute("src","/assets/images/fan.png");
-        }
-        function fun2(source) {
-            const container = document.getElementById('image')
-            const image2 = document.getElementById('image2')
-            let image = image2.getAttribute('src', `${source}`)
-            container.setAttribute("src", `${image}`)
-
-        }
-        function fun3(source) {
-            const container = document.getElementById('image')
-            const image3 = document.getElementById('image3')
-            // let image = image3.setAttribute('src', `${source}`)
-            container.setAttribute("src", `${image}`)
-
-        }
-
-
-    </script>
+        </script>
 </body>
 
 </html>
