--- a/arrays/task.html
+++ b/arrays/task.html
@@ -8,24 +8,24 @@
     <style>
         .container {
             margin: auto;
-            border: 3px solid blue;
+            border: 3px solid black;
             width: 700px;
             text-align: center;
             padding: 40px;
-            border-top: none;
+            
 
         }
 
         table th,
         td {
-            border: 2px solid green;
+            border: 2px solid black;
             height: 20px;
 
         }
 
 
         .container table {
-            border: 3px solid red;
+            border: 3px solid black;
             padding: 30px;
             margin: auto;
             width: 700px;
@@ -123,25 +123,7 @@
         </table>
     </div>
     <script>
-        arr = [10, 50, 80]
 
-
-        let userInput = document.querySelectorAll('.UserInput');
-        let tableData = document.querySelectorAll('.data');
-        function push() {
-            arr.push(userInput[0].value, userInput[1].value, userInput[2].value);
-            // for(let off arr)
-            // {
-
-        }
-
-
-
-        // }
-
-        function show() {
-            console.log(arr);
-        }
     </script>
 </body>
 
