--- a/arrays/sorting in arrays/employeeGetDetails.html
+++ b/arrays/sorting in arrays/employeeGetDetails.html
@@ -36,8 +36,7 @@
         let heading3 = document.getElementById('heading3');
         heading3.innerHTML = salary;
 
-        let heading4 = document.getElementById('heading4
-        ');
+        let heading4 = document.getElementById('heading4');
         heading4.innerHTML = address;
 
 
