--- a/Add Class/addClass.html
+++ b/Add Class/addClass.html
@@ -58,7 +58,8 @@
         // we can add the class via classList property which has many advantages over className
 
         function fun1() {
-            container.classList.add('class1')
+            // container.classList.add('class1')
+            container.classList.toggle('class1')
         }
 
 
