--- a/arrays/task.html
+++ b/arrays/task.html
@@ -67,7 +67,7 @@
                 <button onclick="push()">push</button>
             </div>
 
-            <div>
+            <!-- <div>
                 <button onclick="pop()" type="button">pop</button>
             </div>
             <div>
@@ -76,7 +76,7 @@
 
             <div>
                 <button onclick="unshift()">unshift</button>
-            </div>
+            </div> -->
             <div>
                 <button onclick="show()" type="button">show</button>
             </div>
@@ -98,25 +98,11 @@
             </thead>
 
             <tbody>
-                <tr>
+                <tr id="tbody">
                     <td class="data"></td>
                     <td class="data"></td>
                     <td class="data"></td>
                 </tr>
-
-                <tr>
-                    <td class="data"></td>
-                    <td class="data"></td>
-                    <td class="data"></td>
-                </tr>
-
-                <tr>
-                    <td class="data"></td>
-                    <td class="data"></td>
-                    <td class="data"></td>
-                </tr>
-
-
             </tbody>
 
 
