--- a/string/includes.html
+++ b/string/includes.html
@@ -12,6 +12,7 @@
     <script>
         let string = "logic hub software solutions "
         let isvalid  = string.toLocaleLowerCase().includes('software');
+        console.log(isvalid);
 
         let heading1 = document.getElementById('heading1');
         let res= heading1.innerHTML = isvalid;
