--- a/arrays/unShift.html
+++ b/arrays/unShift.html
@@ -26,7 +26,7 @@
             num = document.getElementById('number').value;
             arr.unshift(num);
 
-            console.log(arr);
+            // console.log(arr);
         }
 
         function show()
